--- a/src/contrib/loggers/Akka.Logger.Serilog/project.json
+++ b/src/contrib/loggers/Akka.Logger.Serilog/project.json
@@ -7,7 +7,7 @@
   "licenseUrl": "",
 
   "dependencies": {
-    "Akka": "1.0.4",
+    "Akka": "",
     "Serilog": "1.5.14",
     "System.Runtime.Extensions": "4.0.0",
     "System.Diagnostics.Process": "4.0.0-beta-22816"
